# film_club

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.MD  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: codeql-analysis.yml
app/core/: admin.py  urls.py  views.py
app/core/fixtures/: labels.json
app/core/forms/: add_movie.py
app/core/management/commands/: example_command.py
app/core/migrations/: 0001_initial.py  0002_label_movie.py  0003_movie_reference_url.py  0004_alter_movie_name.py  0005_movie_author.py  0006_movie_created_at.py  0007_alter_movie_author.py  0008_movie_is_processed_movie_url.py  0009_remove_movie_img_remove_movie_reference_url_and_more.py  0010_movie_source.py  0011_alter_movie_author.py  0012_alter_movie_name_alter_movie_url.py  0013_alter_movie_source.py
app/core/models/: __init__.py  label.py  movie.py  profile.py
app/core/services/: movie_processor.py
app/core/templates/: core.html  index.html  login.html
assets/js/: main.js
assets/scss/: cards.scss  main.scss
config/: settings.py  urls.py
