[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
multi_line_output = 3
profile = "black"
py_version = 310

[tool.poetry]
authors = ["Robert Durica <r.durica@gmail.com>"]
description = ""
license = "MIT"
name = "film_club"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.6"
Pillow = "^9.1.1"
argon2-cffi = "^21.3.0"
beautifulsoup4 = "^4.11.1"
django-crispy-forms = "^1.14.0"
mysqlclient = "^2.1.0"
python = "^3.10"
requests = "^2.28.0"
social-auth-app-django = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
django-debug-toolbar = "^3.2.4"
django-sslserver = "^0.22"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
